<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <!-- main header -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/aboutactivity_header"
        android:textSize="40sp"
        android:textStyle="bold" />

    <!-- sub header -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/aboutactivity_subheader1"
        android:textSize="20sp"
        android:textStyle="bold" />

    <!-- text -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10sp"
        android:text="@string/aboutactivity_purpose_of_app" />


    <!-- sub header -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/aboutactivity_subheader2"
        android:textSize="20sp"
        android:textStyle="bold" />

    <!-- text -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10sp"
        android:text="@string/aboutactivity_developed_by_text" />

    <!-- sub header -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/aboutactivity_subheader3"
        android:textSize="20sp"
        android:textStyle="bold" />

    <!-- text -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10sp"
        android:text="@string/aboutactivity_libraries_used_text" />


    <!-- spacing -->
    <TextView
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp" />

    <!-- text -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:padding="10sp"
        android:text="@string/aboutactivity_for_more_see"
        android:textStyle="italic" />



</android.support.v7.widget.LinearLayoutCompat>
