<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat
    android:orientation="vertical"
    android:gravity="center"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <!-- SOME KIND OF HEADER HERE -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logo_placeholder"
        android:textSize="40dp" />

    <!-- SPACING -->
    <TextView
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp" />

    <!-- STATS? -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stats_placeholder"
        android:textSize="40dp" />

    <!-- SPACING -->
    <TextView
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp" />

    <!-- upload new sketch button -->
    <Button
        android:id="@+id/b_upload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onButtonClick"
        android:text="@string/mainactivity_button_upload" />

    <!-- go to preferences button -->
    <Button
        android:id="@+id/b_preferences"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onButtonClick"
        android:text="@string/mainactivity_button_preferences" />

    <!-- go to about button -->
    <Button
        android:id="@+id/b_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onButtonClick"
        android:text="@string/mainactivity_button_about" />

</android.support.v7.widget.LinearLayoutCompat>
