<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:descendantFocusability="beforeDescendants"
            android:focusableInTouchMode="true">

            <!-- button for taking new picture -->
            <Button
                android:id="@+id/b_takepicture"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onButtonClick"
                android:text="@string/takepictureandsetmetadataactivity_button_take_picture" />

            <!-- preview of picture to be uploaded -->
            <ImageView
                android:id="@+id/iw_preview"
                android:src="@drawable/placeholder"
                android:layout_width="match_parent"
                android:layout_height="400sp" />

            <!-- COMPRESSION OPTIONS -->
            <!--
            SHOW:
            * current level of compression
            * file size
            * length of equivalent text document? (LOC?) (?)
            GIVE OPTIONS TO:
            * increase / decrease compression
            * apply filter (hopefully. greyscale at least)
            -->

            <!-- PLACEHOLDER -->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/takepictureandsetmetadataactivity_subheader_compression_level" />

            <!-- compression level -->
            <SeekBar
                android:id="@+id/sb_compression_level"
                android:progress="80"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <!-- show estimated file size -->
            <TextView
                android:id="@+id/tw_filesize"
                android:textSize="30sp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <!-- for spacing -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <!-- METADATA OPTIONS -->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/takepictureandsetmetadataactivity_header_metadata_options"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/subheader_repository" />

            <EditText
                android:id="@+id/et_repository"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/subheader_branch" />

            <EditText
                android:id="@+id/et_branch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/subheader_path" />

            <EditText
                android:id="@+id/et_path"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/subheader_commit_message" />

            <EditText
                android:id="@+id/et_commitmessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <!-- for spacing -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp" />


            <!-- upload the thing! -->
            <Button
                android:id="@+id/b_upload"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onButtonClick"
                android:text="@string/takepictureandsetmetadataactivity_button_upload" />


        </LinearLayout>

    </ScrollView>




</android.support.v7.widget.LinearLayoutCompat>
